Fix Paginator page alignment

--- a/frontend/src/components/Paginator/Paginator.css
+++ b/frontend/src/components/Paginator/Paginator.css
@@ -20,6 +20,7 @@
 
 .paginator-info {
     color: #767676;
+    margin: auto;
 }
 
 .paginator-action-container {
